deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-ssikit
  labels:
    app: wallet-ssikit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-ssikit
  template:
    metadata:
      labels:
        app: wallet-ssikit
    spec:
      containers:
      - name: ssi-core-dev-env
        image: pablomarrtinez/wallet:v3.0.4
        command: ["/bin/sh", "-c"]
        args: 
          - /app/ssikit.sh fullApi
        ports:
        - containerPort: 32000
        - containerPort: 32001
        - containerPort: 32002
